--- a/.gitattributes
+++ b/.gitattributes
@@ -1,2 +1,9 @@
-# Auto detect text files and perform LF normalization
-* text=auto
+<!DOCTYPE html>
+<hmtl>
+<title>yo.com</title>
+</head>
+<body>
+
+<h1>...yo...
+<p> yo
+</html>
